--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,8 @@
-DefaultLanguage ru
-AddDefaultCharset utf8
-php_value default_charset "utf8"
+RewriteEngine On
+
+RewriteCond %{REQUEST_METHOD} =GET
+   # Выявляем GET запрос в URL (не POST).
+RewriteCond %{REQUEST_URI} ^(.*)/index\.php$
+   # URL cодержит index.php в конце.
+RewriteRule ^(.*)$ %1/ [R=301,L]
+   # Удалить index.php из URL.
